--- a/public/index.html
+++ b/public/index.html
@@ -17,16 +17,55 @@
     <label for="phoneNumber">Your Phone Number:</label><br>
     <input type="text" id="phoneNumber" name="phoneNumber" required><br><br>
 
-    <label for="countryCode">Country Code:</label><br>
-    <select id="countryCode" name="countryCode" required>
-      <option value="+1">🇺🇸 United States (+1)</option>
-      <option value="+1">🇨🇦 Canada (+1)</option>
-      <option value="+44">🇬🇧 United Kingdom (+44)</option>
-      <option value="+61">🇦🇺 Australia (+61)</option>
-      <option value="+91">🇮🇳 India (+91)</option>
-      <option value="+81">🇯🇵 Japan (+81)</option>
-      <!-- Add more countries if needed -->
-    </select><br><br>
+<label for="countryCode">Country Code:</label><br>
+<select id="countryCode" name="countryCode" required>
+  <option value="+1">🇺🇸 United States (+1)</option>
+  <option value="+1">🇨🇦 Canada (+1)</option>
+  <option value="+44">🇬🇧 United Kingdom (+44)</option>
+  <option value="+61">🇦🇺 Australia (+61)</option>
+  <option value="+91">🇮🇳 India (+91)</option>
+  <option value="+81">🇯🇵 Japan (+81)</option>
+  <option value="+49">🇩🇪 Germany (+49)</option>
+  <option value="+33">🇫🇷 France (+33)</option>
+  <option value="+39">🇮🇹 Italy (+39)</option>
+  <option value="+34">🇪🇸 Spain (+34)</option>
+  <option value="+86">🇨🇳 China (+86)</option>
+  <option value="+82">🇰🇷 South Korea (+82)</option>
+  <option value="+7">🇷🇺 Russia (+7)</option>
+  <option value="+55">🇧🇷 Brazil (+55)</option>
+  <option value="+52">🇲🇽 Mexico (+52)</option>
+  <option value="+27">🇿🇦 South Africa (+27)</option>
+  <option value="+46">🇸🇪 Sweden (+46)</option>
+  <option value="+47">🇳🇴 Norway (+47)</option>
+  <option value="+31">🇳🇱 Netherlands (+31)</option>
+  <option value="+41">🇨🇭 Switzerland (+41)</option>
+  <option value="+48">🇵🇱 Poland (+48)</option>
+  <option value="+351">🇵🇹 Portugal (+351)</option>
+  <option value="+65">🇸🇬 Singapore (+65)</option>
+  <option value="+63">🇵🇭 Philippines (+63)</option>
+  <option value="+20">🇪🇬 Egypt (+20)</option>
+  <option value="+90">🇹🇷 Turkey (+90)</option>
+  <option value="+64">🇳🇿 New Zealand (+64)</option>
+  <option value="+45">🇩🇰 Denmark (+45)</option>
+  <option value="+32">🇧🇪 Belgium (+32)</option>
+  <option value="+43">🇦🇹 Austria (+43)</option>
+  <option value="+60">🇲🇾 Malaysia (+60)</option>
+  <option value="+66">🇹🇭 Thailand (+66)</option>
+  <option value="+62">🇮🇩 Indonesia (+62)</option>
+  <option value="+353">🇮🇪 Ireland (+353)</option>
+  <option value="+358">🇫🇮 Finland (+358)</option>
+  <option value="+420">🇨🇿 Czech Republic (+420)</option>
+  <option value="+421">🇸🇰 Slovakia (+421)</option>
+  <option value="+36">🇭🇺 Hungary (+36)</option>
+  <option value="+972">🇮🇱 Israel (+972)</option>
+  <option value="+30">🇬🇷 Greece (+30)</option>
+  <option value="+353">🇮🇪 Ireland (+353)</option>
+  <option value="+370">🇱🇹 Lithuania (+370)</option>
+  <option value="+371">🇱🇻 Latvia (+371)</option>
+  <option value="+372">🇪🇪 Estonia (+372)</option>
+  <option value="+48">🇵🇱 Poland (+48)</option>
+</select><br><br>
+
 
     <label for="offendingNumber">Offending Number:</label><br>
     <input type="text" id="offendingNumber" name="offendingNumber" required><br><br>
