updated abuse contacts

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,24 @@
   <title>Spam Text Message Reporter</title>
 </head>
 <body>
-  <h1>Report a Spam Text Message</h1>
+  <h1>Report Scam/Fraud SMS  Message</h1>
+
+<div id="description" style="max-width:700px; margin-bottom:20px;">
+  <p>
+    Have you ever received strange text messages from unknown numbers saying things like
+    "<em>How have you been?</em>" or "<em>What time are you picking me up?</em>"?
+  </p>
+  <p>
+    These are called <strong>smishing</strong> attacks — like phishing, but delivered through SMS.
+  </p>
+  <p>
+    This form provides a fast, easy way to report suspicious numbers so that carriers can investigate and shut them down.
+  </p>
+  <p>
+    <strong>Don’t worry</strong> about accidentally reporting legitimate wrong-number texts — carriers are able to distinguish fraud from genuine messages.
+  </p>
+</div>
+
 
   <form id="reportForm">
     <label for="name">Your Name:</label><br>
