--- a/public/index.html
+++ b/public/index.html
@@ -2,136 +2,138 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Spam Text Message Reporter</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Spam SMS Reporter</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: auto;
+      padding: 20px;
+    }
+    input, select, textarea, button {
+      width: 100%;
+      padding: 8px;
+      margin: 10px 0;
+    }
+    button {
+      width: auto;
+      margin-right: 10px;
+    }
+    #result {
+      background: #f4f4f4;
+      padding: 1em;
+      margin-top: 20px;
+      border-radius: 8px;
+    }
+  </style>
 </head>
 <body>
-<h1>Report Scam/Fraud Text Message</h1>
-
-<p>
-  Have you ever received strange text messages from unknown numbers saying things like "How have you been?" or "What time are you picking me up?"?<br><br>
-
-  These are called <strong>smishing attacks</strong> — like phishing, but delivered through SMS.<br><br>
-
-  This form provides a fast, easy way to report suspicious numbers so that carriers can investigate and shut them down.<br><br>
-
-  Don’t worry about accidentally reporting legitimate wrong-number texts — carriers are able to distinguish fraud from genuine messages.
-</p>
+  <h1>Spam SMS Reporter</h1>
+  <p>
+    Have you ever received strange text messages from unknown numbers saying things like
+    "How have you been?" or "What time are you picking me up?"?
+  </p>
+  <p>
+    These are called <strong>smishing attacks</strong> — like phishing, but delivered through SMS.
+    This form provides a fast, easy way to report suspicious numbers so that carriers can investigate and shut them down.
+    Don’t worry about accidentally reporting legitimate wrong-number texts — carriers are able to distinguish fraud from genuine messages.
+  </p>
 
   <form id="reportForm">
-    <label>Name:<br><input type="text" name="name" required></label><br><br>
-
-    <label>Email:<br><input type="email" name="email" required></label><br><br>
-
-    <label>Your Phone Number:<br><input type="text" name="phoneNumber" required></label><br><br>
-
-    <label>Country Code:<br>
-      <select name="countryCode" required>
-        <option value="+1" selected>🇺🇸 United States (+1)</option>
-        <option value="+44">🇬🇧 United Kingdom (+44)</option>
-        <option value="+61">🇦🇺 Australia (+61)</option>
-        <option value="+49">🇩🇪 Germany (+49)</option>
-        <option value="+33">🇫🇷 France (+33)</option>
-        <option value="+91">🇮🇳 India (+91)</option>
-      </select>
-    </label><br><br>
-
-    <label>Offending Number:<br><input type="text" name="offendingNumber" required></label><br><br>
-
-    <label>Date Message Sent:<br><input type="date" name="date" required></label><br><br>
-
-    <label>Time Message Sent:<br><input type="time" name="time" required></label><br><br>
-
-    <label>Time Zone:<br><input type="text" name="timeZone" value="EST" required></label><br><br>
-
-    <label>Message Content (optional):<br><textarea name="messageContent" rows="4" cols="50"></textarea></label><br><br>
-
-    <label>
-      <input type="checkbox" name="isIRSScam"> This was an IRS scam
-    </label><br><br>
-
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="email" placeholder="Your Email" required>
+    <input type="text" name="phoneNumber" placeholder="Your Phone Number (you received message on)" required>
+    <select name="countryCode" required>
+      <option value="+1">🇺🇸 USA (+1)</option>
+      <option value="+44">🇬🇧 UK (+44)</option>
+      <option value="+61">🇦🇺 Australia (+61)</option>
+      <option value="+91">🇮🇳 India (+91)</option>
+      <!-- Add more countries if needed -->
+    </select>
+    <input type="text" name="offendingNumber" placeholder="Offending Number" required>
+    <input type="date" name="date" required>
+    <input type="time" name="time" required>
+    <input type="text" name="timeZone" placeholder="Your Time Zone (e.g., EST, PST)" required>
+    <textarea name="messageContent" rows="4" placeholder="Message Content (optional)"></textarea>
+    <label><input type="checkbox" name="isIRSScam"> Check if this was an IRS scam</label>
     <button type="submit">Submit Report</button>
   </form>
 
-  <hr>
+  <div id="result" style="display: none;">
+    <h3>Email Report</h3>
+    <p><strong>To:</strong> <span id="abuseEmails"></span></p>
+    <p><strong>CC:</strong> <span id="ccEmails"></span></p>
+    <p><strong>Subject:</strong> <span id="emailSubject"></span></p>
+    <p><strong>Body:</strong></p>
+    <pre id="emailBody"></pre>
 
-  <div id="manualMessage" style="display:none; color: red; font-weight: bold; margin-top:20px;"></div>
-
-  <div id="result" style="margin-top:20px;"></div>
-  <button id="copyButton" style="display:none;">Copy Email to Clipboard</button>
-  <a id="gmailLink" style="display:none; margin-left:10px;" target="_blank">Send via Gmail</a>
+    <button onclick="copyToClipboard()">📋 Copy Email</button>
+    <button onclick="downloadEML()">📩 Download .eml</button>
+    <button onclick="openGmail()">📧 Open in Gmail</button>
+    <button onclick="openOutlook()">📨 Open in Outlook/Hotmail</button>
+    <button onclick="window.location.reload()">↩️ Report Another Number</button>
+  </div>
 
   <script>
-    const form = document.getElementById('reportForm');
-
-    form.addEventListener('submit', async (e) => {
+    document.getElementById('reportForm').addEventListener('submit', async function(e) {
       e.preventDefault();
 
-      const formData = {
-        name: form.name.value,
-        email: form.email.value,
-        phoneNumber: form.phoneNumber.value,
-        countryCode: form.countryCode.value,
-        offendingNumber: form.offendingNumber.value,
-        date: form.date.value,
-        time: form.time.value,
-        timeZone: form.timeZone.value,
-        messageContent: form.messageContent.value,
-        isIRSScam: form.isIRSScam.checked
-      };
+      const formData = new FormData(e.target);
+      const json = Object.fromEntries(formData.entries());
 
-      try {
-        const response = await fetch('/submit-report', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(formData)
-        });
+      const response = await fetch('/submit-report', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(json)
+      });
 
-        const data = await response.json();
+      const data = await response.json();
 
-        if (data.manualAction) {
-          document.getElementById('manualMessage').style.display = 'block';
-          document.getElementById('manualMessage').innerText = `⚠️ No known abuse contact found for "${data.provider}". Please report manually.`;
-          document.getElementById('result').innerHTML = '';
-          document.getElementById('copyButton').style.display = 'none';
-          document.getElementById('gmailLink').style.display = 'none';
-        } else {
-          document.getElementById('manualMessage').style.display = 'none';
-          document.getElementById('result').innerHTML = `
-            <h3>Report Ready</h3>
-            <p><strong>To:</strong> ${data.abuseEmails.join(', ')}</p>
-            <p><strong>CC:</strong> ${data.ccEmails.join(', ')}</p>
-            <p><strong>Subject:</strong> ${data.emailSubject}</p>
-            <p><strong>Body:</strong></p>
-            <pre id="emailBody">${data.emailBody}</pre>
-          `;
+      document.getElementById('abuseEmails').textContent = data.abuseEmails.join(', ') || 'Unknown';
+      document.getElementById('ccEmails').textContent = data.ccEmails?.join(', ') || '';
+      document.getElementById('emailSubject').textContent = data.emailSubject;
+      document.getElementById('emailBody').textContent = data.emailBody;
 
-          document.getElementById('copyButton').style.display = 'inline-block';
-          document.getElementById('gmailLink').style.display = 'inline-block';
-
-          // Setup Gmail Link
-          const mailtoSubject = encodeURIComponent(data.emailSubject);
-          const mailtoBody = encodeURIComponent(data.emailBody);
-          const mailtoTo = encodeURIComponent(data.abuseEmails.join(','));
-          const mailtoCc = encodeURIComponent(data.ccEmails.join(','));
-          document.getElementById('gmailLink').href = `https://mail.google.com/mail/?view=cm&fs=1&to=${mailtoTo}&cc=${mailtoCc}&su=${mailtoSubject}&body=${mailtoBody}`;
-        }
-
-        form.reset();
-        form.countryCode.value = "+1";
-      } catch (error) {
-        console.error('Error:', error);
-        alert('An error occurred while submitting the report.');
-      }
+      document.getElementById('result').style.display = 'block';
     });
 
-    // Copy email body to clipboard
-    document.getElementById('copyButton').addEventListener('click', () => {
-      const emailBody = document.getElementById('emailBody').innerText;
-      navigator.clipboard.writeText(emailBody)
-        .then(() => alert('Email body copied to clipboard!'))
-        .catch(err => console.error('Copy failed', err));
-    });
+    function copyToClipboard() {
+      const body = document.getElementById('emailBody').textContent;
+      navigator.clipboard.writeText(body).then(() => alert('Copied to clipboard!'));
+    }
+
+    function downloadEML() {
+      const to = document.getElementById('abuseEmails').textContent;
+      const cc = document.getElementById('ccEmails').textContent;
+      const subject = document.getElementById('emailSubject').textContent;
+      const body = document.getElementById('emailBody').textContent;
+
+      const eml = `To: ${to}\nCC: ${cc}\nSubject: ${subject}\n\n${body}`;
+      const blob = new Blob([eml], { type: 'message/rfc822' });
+      const a = document.createElement('a');
+      a.href = URL.createObjectURL(blob);
+      a.download = 'spam_report.eml';
+      a.click();
+    }
+
+    function openGmail() {
+      const to = encodeURIComponent(document.getElementById('abuseEmails').textContent);
+      const cc = encodeURIComponent(document.getElementById('ccEmails').textContent);
+      const subject = encodeURIComponent(document.getElementById('emailSubject').textContent);
+      const body = encodeURIComponent(document.getElementById('emailBody').textContent);
+
+      window.open(`https://mail.google.com/mail/?view=cm&fs=1&to=${to}&cc=${cc}&su=${subject}&body=${body}`, '_blank');
+    }
+
+    function openOutlook() {
+      const to = encodeURIComponent(document.getElementById('abuseEmails').textContent);
+      const cc = encodeURIComponent(document.getElementById('ccEmails').textContent);
+      const subject = encodeURIComponent(document.getElementById('emailSubject').textContent);
+      const body = encodeURIComponent(document.getElementById('emailBody').textContent);
+
+      window.open(`https://outlook.live.com/mail/deeplink/compose?to=${to}&cc=${cc}&subject=${subject}&body=${body}`, '_blank');
+    }
   </script>
 </body>
 </html>
